--- a/src/containers/loginPage/index.css
+++ b/src/containers/loginPage/index.css
@@ -11,7 +11,7 @@ h2 {
 .login-box {
     background-color: white;
     position: fixed;
-    width: 25%;
+    width: 350px;
     height: 100%;
     padding: 30px;
 }
