--- a/src/containers/filesPage/index.css
+++ b/src/containers/filesPage/index.css
@@ -1,4 +1,43 @@
-#left{float: left;width: 100px;height: 100px; margin-right: 10px;}
+/*#left{float: left;width: 100px;height: 100px; margin-right: 10px;}
 #left1{float:left;width: 100px;height: 100px; margin-right: 5px;}
 #right{float: right;width:50px; height: 10px;}
 #center{margin: 0 auto;width: 100px;}
+*/
+
+div.filesList {
+   display: block;
+   margin: auto;
+   padding: 5px;
+   width: 96%;
+   height: 325px;
+   border: 10px solid gray;
+   clear: both;
+   overflow: auto;
+}
+
+div.filesListItem {
+   display: block;
+   width: 99%;
+   height: 50px;
+   border: 1px solid black;
+   background-color: powderblue;
+   clear: both;
+}
+
+div.fileTile {
+   display: block;
+   width: 85%;
+   height: 100%;
+   border: 3px solid purple;
+   float: left;
+   clear: left;
+}
+
+button.downloadFileBtn {
+	display: block;
+	width: 15%;
+	height: 100%;
+	float: right;
+	clear: right;
+	text-align: center;
+}
