--- a/src/containers/scriptPage/index.css
+++ b/src/containers/scriptPage/index.css
@@ -1,8 +1,33 @@
-h2.header {
+h1.main-page-header {
     text-align: center;
+    text-transform: uppercase;
+}
+
+.main-page-row {
+    padding: 10px 5%;
+}
+
+.no-content-text {
+    text-align: center;
+}
+
+.main-page-content .dropdown {
+    width: 100%;
+}
+
+.main-page-content .dropdown button {
+    width: 100%;
+    overflow: hidden;
+}
+
+.main-page-content .dropdown li {
+    text-align: center;
+}
+
+.main-page-content .lines-list-group button:focus {
+    z-index: 5;
 }
 
 #play-dropdown {
     width: 100%;
-    margin-bottom: 20px;
 }
