--- a/src/config/styles/index.css
+++ b/src/config/styles/index.css
@@ -3,8 +3,14 @@
 @import url("../../containers/loginPage/index.css");
 @import url("../../containers/scriptPage/index.css");
 
-/*body {
-  margin: 0;
+body {
+  /*margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}*/
+  font-family: sans-serif;*/
+  min-width: 300px;
+}
+
+.panel {
+    max-height: 400px;
+    overflow-y: scroll;
+}
