--- a/src/containers/scriptPage/index.css
+++ b/src/containers/scriptPage/index.css
@@ -1,5 +1,5 @@
 h1.main-page-header {
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
 }
 
@@ -26,4 +26,11 @@ h1.main-page-header {
 
 .main-page-content .lines-list-group button:focus {
     z-index: 5;
+}
+
+.blocking-view-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 10px 10px;
 }
