--- a/src/containers/filesPage/index.css
+++ b/src/containers/filesPage/index.css
@@ -44,7 +44,17 @@ margin-left: 5%;
 }*/
 
 .main-container {
-    background-color: #eeeeee;
-    padding: 0 20px;
+    background-color: rgb(246, 246, 246);
+    padding: 30px;
     width: 600px;
+    border-radius: 5px;
+    margin: 50px 0;
+}
+
+.file-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
 }
