--- a/src/containers/mainHeader/index.css
+++ b/src/containers/mainHeader/index.css
@@ -1,4 +1,24 @@
 .site-logo {
     float: left;
-    margin: 5px 20px 0 10px;
+    margin: 2px 10px 0px 0px ;
+    margin-left:5px;
 }
+.navbar-inverse {
+	background-color: black;
+	border-color: gray;
+}
+
+.navbar-inverse .navbar-brand {
+	color: white;
+	text-transform: uppercase;
+
+
+}
+
+h1.main-page-header {
+	font-size: 35px;
+	padding-left: 20px;
+}
+h2 {
+	font-size: 10px;
+	}
