--- a/src/containers/scriptPage/index.css
+++ b/src/containers/scriptPage/index.css
@@ -1,10 +1,13 @@
 h1.main-page-header {
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
+    font-weight: bold;
+    
 }
 
 .main-page-row {
     padding: 10px 5%;
+    
 }
 
 .no-content-text {
