--- a/src/config/styles/index.css
+++ b/src/config/styles/index.css
@@ -11,7 +11,11 @@ body {
   min-width: 300px;
 }
 
+h2 {
+    font-size: 12pt;
+}
+
 .panel {
-    max-height: 400px;
+    max-height: 500px;
     overflow-y: scroll;
 }
